# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "tg2mx-bot"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
dotenvy = "0.15"
futures-util = "0.3"
heck = "0.5"
indexmap = { version = "2.0", features = ["serde"] }
indoc = "2.0"
log = "0.4"
monostate = "0.1"
mstickerlib = { git = "https://github.com/LuckyTurtleDev/mstickereditor", rev = "45ff229" }
once_cell = "1.9"
pretty_env_logger = "0.5"
reqwest = { version = "0.12", features = ["gzip", "json", "rustls-tls-webpki-roots"], default-features = false }
ruma = { version = "0.8", features = ["unstable-msc2677"] }
serde = { version = "1.0.184", features = ["derive"] }
serde-big-array = "0.5"
serde_json = "1.0"
tokio = { version = "1.20", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = { version = "0.1", features = ["log"] }

[dependencies.matrix-sdk]
git = "https://github.com/matrix-org/matrix-rust-sdk"
rev = "18e6f1036727ba5833be4b66900efe34bd29efc6"
features = ["rustls-tls"]
default-features = false
